# compiler

./: CMakeLists.txt  ast.c  ast.h  lexer.c  main.c  parser.c
include/: lexer.h  parser.h
src/: main.c  parser.c
